# chasqui-server

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.agent/: frontend_integration.md  instructions.md  roadmap.md
.agent/decisions/: architecture-analysis.md  image-strategy.md
.agent/knowledge/: architecture.md  patterns.md
.agent/skills/add-backend-feature/: SKILL.md
.agent/workflows/: add-endpoint.md  test-chat.md
.github/workflows/: rust.yml
src/: error.rs  lib.rs  main.rs  models.rs
src/application/: mod.rs
src/application/services/: conversation_service.rs  data_trait_executor.rs  message_service.rs  mod.rs
src/config/: app_config.rs  mod.rs
src/error/: task_error.rs
src/infrastructure/: mod.rs
src/infrastructure/auth/: jwt.rs  mod.rs
src/infrastructure/database/: mod.rs  surrealdb.rs
src/infrastructure/database/repositories/: mod.rs  surreal_conversation.rs  surreal_message.rs
src/infrastructure/logging/: middleware.rs  mod.rs
src/infrastructure/websocket/: chat_server.rs  mod.rs  session.rs
src/interfaces/: mod.rs
src/interfaces/api/: api_doc.rs  chat_handlers.rs  mod.rs  routes.rs  task_handlers.rs  user_handlers.rs
src/interfaces/repositories/: conversation.rs  message.rs  mod.rs
src/models/entities/: conversation.rs  message.rs  mod.rs  role.rs  task.rs  user.rs
src/models/traits/: mod.rs  task_data_trait.rs  user_data_trait.rs
tests/: config_tests.rs  database_init_ignored.rs  db_test.rs  error_tests.rs  jwt_tests.rs  mod.rs
tests/common/: mod.rs  test_utils.rs
tests/common/mocks/: mod.rs  user_repository.rs
tests/unit/: mod.rs  user_service_tests.rs
tests/user/: mod.rs  role_model_test.rs  role_persistence_test.rs  role_test.rs
