[package]
name = "actix-crud"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "actix-crud"
path = "src/main.rs"

[lib]
name = "actix_crud"
path = "src/lib.rs"

[dependencies]
actix-web = "4.5.1"
async-trait = "0.1.79"
derive_more = "0.99.17"
json = "0.12.4"
serde = { version="1.0.197", features = ["derive"]}
surrealdb = "1.4.0"
uuid = { version = "1.8.0", features = ["v4"] }
validator = { version="0.18.0", features = ["derive"]}
jsonwebtoken = "8.1.1"
bcrypt = "0.13.0"
chrono = "0.4.19"
env_logger = "0.11.5"
log = "0.4.22"
dotenv = "0.15.0"
futures = "0.3.30"
