[package]
name = "actix-crud"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "actix-crud"
path = "src/main.rs"

[lib]
name = "actix_crud"
path = "src/lib.rs"

[dependencies]
actix-web = "4.11.0"
async-trait = "0.1.89"
derive_more = "0.99.20"
json = "0.12.4"
serde = { version = "1.0.228", features = ["derive"] }
surrealdb = "2.4.0"
uuid = { version = "1.18.1", features = ["v4"] }
validator = { version="0.18.1", features = ["derive"]}
jsonwebtoken = "8.3.0"
bcrypt = "0.13.0"
chrono = "0.4.42"
env_logger = "0.11.8"
log = "0.4.28"
dotenv = "0.15.0"
futures = "0.3.31"
actix-files = "0.6.8"
actix-multipart = "0.7.2"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
mime = "0.3.17"
actix-web-actors = "4.3.1"
dotenvy = "0.15.7"

[dev-dependencies]
actix-rt = "2.10"
serde_json = "1.0"
awc = "3.5"                        # Cliente WebSocket para tests
tempfile = "3.10"  
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
mockall = "0.13.1"
async-trait = "0.1.89"
thiserror = "2.0.17"

[[test]]
name = "role_test"
path = "tests/user/role_test.rs"

[[test]]
name = "jwt_test"
path = "tests/auth/jwt_test.rs"

[[test]]
name = "role_persistence_test"
path = "tests/user/role_persistence_test.rs"
